<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Baba Track</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_nature">Nature</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_white_noise">White Noise</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_pink_noise">Pink Noise</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_weather">Weather</string>

    <string name="category_brown_noise">Brown Noise</string>

    <string name="sound_image_default_description">This is an image associated with the sound</string>

    <string name="play_button_image_description">This is a button that plays the associated sound</string>

    <string name="hello_blank_fragment">Something went wrong. Please report this.</string>


    <!--<string name="title_activity_brown_noise">BrownNoiseActivity</string>-->
</resources>